mas-crm/force-app/main/default/objects/Error_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>The Apex class where the error occurred</description>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>