mas-crm/force-app/main/default/objects/Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>The type or category of error</description>
    <label>Error Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>DML Error</fullName>
            </value>
            <value>
                <fullName>SOQL Error</fullName>
            </value>
            <value>
                <fullName>Validation Error</fullName>
            </value>
            <value>
                <fullName>Integration Error</fullName>
            </value>
            <value>
                <fullName>Business Logic Error</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>