mas-crm/force-app/main/default/objects/Error_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>The method where the error occurred</description>
    <label>Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>