mas-crm/force-app/main/default/objects/Error_Log__c/fields/Record_Context__c.field-meta.xml
<CustomField>
    <fullName>Record_Context__c</fullName>
    <description>The record ID or context where the error occurred</description>
    <label>Record Context</label>
    <length>18</length>
    <type>Text</type>
</CustomField>