mas-crm/force-app/main/default/objects/Error_Log__c/fields/User_Context__c.field-meta.xml
<CustomField>
    <fullName>User_Context__c</fullName>
    <description>The user context when the error occurred</description>
    <label>User Context</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>